src2/objects/Blocked_Unblocked_Status_Matrix__mdt.object
<CustomObject>
    <fields>
        <fullName>Actual_Operational_Status__c</fullName>
        <label>Actual Operational Status</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Operational_Status__c</fullName>
        <label>Changed Operational Status</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Blocked/Unblocked Status Matrix</label>
    <pluralLabel>Blocked/Unblocked Statuses Matrix</pluralLabel>
</CustomObject>